# time-tracking-manager

./: Cargo.toml
.github/workflows/: format.yml
src/: args.rs  entries.rs  lib.rs  provider_handle.rs  providers.rs  renamers.rs  tablers.rs  utils.rs
src/exporters/: console.rs  csv.rs  progessi.rs
src/providers/: clockify.rs  ics.rs
src/tablers/: month_proportional.rs  proportional.rs
