[package]
name = "time-tracking-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", features = [
    "blocking",
    "json",
    "default-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.1"
rand = "0.8.5"
wasm-bindgen = "0.2.93"
getrandom = { version = "0.2.16", features = ["js"] }
tokio = { version = "1.45.0", features = ["macros", "rt"] }
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = [
    "console",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Document",
    "NodeList",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "Event",
    "HtmlLiElement",
    "HtmlUListElement",
    "HtmlSpanElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
] }
serde-wasm-bindgen = "0.6.5"
gloo = "0.11.0"
async-trait = "0.1.88"
thiserror = "2.0.12"

[dev-dependencies]
serial_test = "3.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }
